# commercial_formatter

./: .gitignore  README.md  build.sh  commercial_formatter  globals.odin  helpers.odin  io.odin  komm_fmt  komm_fmt.odin  main.odin  output.csv  process_files.odin  rejected.csv  stations.odin  test.txt  test2.txt
bak_files/: Radio 100 2024 11.txt  Radio 100 2024 12.txt  headlines.csv
console_test/: console_test  main.odin
lib/: convert.py  delete_columns.py  delete_podcast.py
odin/: helpers.odin  io.odin  komm_fmt_odin  process_files.odin  stations.odin
python/: .dockerignore  Dockerfile  app_logging.py  choices.py  config.py  decisions.py  formatters.py  main.py  output.py  processor.py  pyproject.toml  settings.py  stations.py
python/config/: folders.toml  settings.toml  stations.toml  stopwords.toml
python/lib/: convert.py  delete_columns.py  delete_podcast.py  utils.py
tests/: test_delete_columns.py
