[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commercial-formatter"
version = "2.0.0"
description = "Process broadcast metadata files from radio stations"
requires-python = ">=3.11"
dependencies = [
    "chardet",
    "openpyxl",
]

[project.scripts]
komm_fmt = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "stations", "processor"]

[tool.setuptools.package-data]
"*" = ["config/*.toml", "lib/*.py"]
